@@ -7,7 +7,7 @@ use
 
 class JsonTest extends \PHPUnit_Framework_TestCase {
 
-    function testRoundTrip() {
+    function testRoundTripJCard() {
 
         $input = array(
             "vcard",
@@ -194,4 +194,198 @@ VCF;
 
     }
 
+    function testRoundTripJCal() {
+
+        $input = array(
+            "vcalendar",
+            array(
+                array(
+                    "version",
+                    new \StdClass(),
+                    "text",
+                    "2.0"
+                ),
+                array(
+                    "prodid",
+                    new \StdClass(),
+                    "text",
+                    "-//Sabre//Sabre VObject " . VObject\Version::VERSION . "//EN",
+                ),
+                array(
+                    "calscale",
+                    new \StdClass(),
+                    "text",
+                    "GREGORIAN"
+                ),
+            ),
+            array(
+                array("vevent",
+                    array(
+                        array(
+                            "uid", new \StdClass(), "text", "foo",
+                        ),
+                        array(
+                            "dtstart", new \StdClass(), "date", "2013-05-26",
+                        ),
+                        array(
+                            "duration", new \StdClass(), "duration", "P1D",
+                        ),
+                        array(
+                            "categories", new \StdClass(), "text", "home", "testing",
+                        ),
+                        array(
+                            "created", new \StdClass(), "date-time", "2013-05-26T18:10:00Z",
+                        ),
+                        array(
+                            "attach", new \StdClass(), "binary", base64_encode('attachment')
+                        ),
+                        array(
+                            "attendee", new \StdClass(), "cal-address", "mailto:armin@example.org",
+                        ),
+                        array(
+                            "geo", new \StdClass(), "float", array(51.96668, 7.61876),
+                        ),
+                        array(
+                            "sequence", new \StdClass(), "integer", 5
+                        ),
+                        array(
+                            "freebusy", new \StdClass(), "period",  array("2013-05-26T21:02:13", "PT1H"), array("2013-06-26T12:00:00", "2013-06-26T13:00:00"),
+                        ),
+                        array(
+                            "url", new \StdClass(), "uri", "http://example.org/",
+                        ),
+                        array(
+                            "tzoffsetfrom", new \StdClass(), "utc-offset", "+05:00",
+                        ),
+                        array(
+                            "rrule", new \StdClass(), "recur", array(
+                                'freq' => 'WEEKLY',
+                                'byday' => array('MO', 'TU'),
+                            ),
+                        ),
+                        array(
+                            "x-bool", new \StdClass(), "boolean", true
+                        ),
+                        array(
+                            "x-time", new \StdClass(), "time", "08:00:00",
+                        ),
+                        array(
+                            "attendee",
+                            (object)array(
+                                "cn" => "Dominik",
+                                "partstat" => "DECLINED",
+                            ),
+                            "cal-address",
+                            "mailto:dominik@example.org"
+                        ),
+                        array(
+                            "request-status",
+                            new \StdClass(),
+                            "text",
+                            array("2.0", "Success"),
+                        ),
+                        array(
+                            "request-status",
+                            new \StdClass(),
+                            "text",
+                            array("3.7", "Invalid Calendar User", "ATTENDEE:mailto:jsmith@example.org"),
+                        ),
+                    ),
+                    array(
+                        array("valarm",
+                            array(
+                                array(
+                                    "action", new \StdClass(), "text", "DISPLAY",
+                                ),
+                            ),
+                            array(),
+                        ),
+                    ),
+                )
+            ),
+        );
+
+        $parser = new Json(json_encode($input));
+        $vobj = $parser->parse();        
+        $result = $vobj->serialize();
+
+        $expected = <<<VCF
+BEGIN:VCALENDAR
+VERSION:2.0
+PRODID:-//Sabre//Sabre VObject 3.0.1//EN
+CALSCALE:GREGORIAN
+BEGIN:VEVENT
+UID:foo
+DTSTART;VALUE=DATE:20130526
+DURATION:P1D
+CATEGORIES:home,testing
+CREATED:20130526T181000Z
+ATTACH:YXR0YWNobWVudA==
+ATTENDEE:mailto:armin@example.org
+GEO:51.96668;7.61876
+SEQUENCE:5
+FREEBUSY:20130526T210213/PT1H,20130626T120000/20130626T130000
+URL:http://example.org/
+TZOFFSETFROM:+05:00
+RRULE:FREQ=WEEKLY;BYDAY=MO,TU
+X-BOOL;VALUE=BOOLEAN:TRUE
+X-TIME;VALUE=TIME:08:00:00
+ATTENDEE;CN=Dominik;PARTSTAT=DECLINED:mailto:dominik@example.org
+REQUEST-STATUS:2.0;Success
+REQUEST-STATUS:3.7;Invalid Calendar User;ATTENDEE:mailto:jsmith@example.org
+BEGIN:VALARM
+ACTION:DISPLAY
+END:VALARM
+END:VEVENT
+END:VCALENDAR
+
+VCF;
+        $this->assertEquals($expected, str_replace("\r", "", $result));
+
+        $this->assertEquals(
+            $input,
+            $vobj->jsonSerialize()
+        );
+
+    }
+
+    function testParseStreamArg() {
+
+        $json = new Json();
+        $input = array(
+            "vcard",
+            array(
+                array(
+                    "FN", new \StdClass(), 'text', "foo",
+                ),
+            ),
+        );
+
+        $stream = fopen('php://memory','r+');
+        fwrite($stream, json_encode($input));
+        rewind($stream);
+
+        $result = $json->parse($stream,0);
+        $this->assertEquals('foo', $result->FN->getValue());
+
+    }
+
+    /**
+     * @expectedException \Sabre\VObject\ParseException
+     */
+    function testParseInvalidData() {
+
+        $json = new Json();
+        $input = array(
+            "vlist",
+            array(
+                array(
+                    "FN", new \StdClass(), 'text', "foo",
+                ),
+            ),
+        );
+
+        $json->parse(json_encode($input), 0);
+
+    }
 }
